bynkc/tests/fixtures/positive/408_generic_sum_nested_pattern/input.bynk
commons nested

-- #593: a nested variant pattern into a generic sum's type-parameter payload.
-- `Has(item: T)` at `T = Inner` means the inner sub-pattern `Wrap(p)` binds the
-- payload field `payload` — the emitter must substitute the type argument to
-- recover that name (a bug would fall back to the generic `value`).
type Inner =
  | Wrap(payload: String)
  | Blank

type Outer[T] =
  | Has(item: T)
  | Nothing

fn unwrap(o: Outer[Inner]) -> String {
  match o {
    Has(Wrap(p)) => p,
    Has(Blank) => "blank",
    Nothing => "nothing",
  }
}
